--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id "androidx.navigation.safeargs.kotlin"
-
+    id 'dagger.hilt.android.plugin'
 
 }
 
@@ -89,6 +89,16 @@ dependencies {
     api 'com.google.dagger:dagger-android:2.35.1'
     api 'com.google.dagger:dagger-android-support:2.28.1'
     kapt 'com.google.dagger:dagger-android-processor:2.23.2'
+
+    // Activity
+    implementation "androidx.activity:activity-ktx:1.4.0"
+
+    // Dagger - hilt
+    implementation "com.google.dagger:hilt-android:2.41"
+    kapt "com.google.dagger:hilt-android-compiler:2.41"
+
+    // implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    kapt "com.google.dagger:hilt-android-compiler:2.41"
 
     // Easy Permissions
     implementation 'pub.devrel:easypermissions:3.0.0'
