--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,16 @@ plugins {
     id 'kotlin-kapt'
     id "androidx.navigation.safeargs.kotlin"
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-android-extensions'
 
 }
 
 android {
     compileSdk 32
     buildToolsVersion "30.0.3"
+    viewBinding {
+        enabled = true
+    }
 
     defaultConfig {
         applicationId "com.example.gowalk_v_final"
@@ -27,6 +31,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
